Febrero sin imgs

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <table>
             <thead>
                 <tr>
+                    <th colspan="9">ENERO</th>
+                </tr>
+                <tr>
                     <th>Empresa</th>
                     <th>Fecha</th>
                     <th>Importe</th>
@@ -721,6 +724,222 @@
                     <td>1,530.00€</td>
                     <td><a href="Facturas/Hotel Montecarlo 31.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="9">FEBRERO</th>
+                </tr>
+                <tr>
+                    <th>Empresa</th>
+                    <th>Fecha</th>
+                    <th>Importe</th>
+                    <th>IVA</th>
+                    <th>Descuento</th>
+                    <th>Otros</th>
+                    <th>Total</th>
+                    <th>Factura</th>
+                    <th>Estado</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td colspan="9">01/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Marisc Romeu</td>
+                    <td>01/02/2025</td>
+                    <td>398.01€</td>
+                    <td>39.80€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>437.81€</td>
+                    <td><a href="Facturas/Marisc Romeu 1.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">03/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Sales</td>
+                    <td>03/02/2025</td>
+                    <td>87.78€</td>
+                    <td>8.78€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>96.56€</td>
+                    <td><a href="Facturas/Sales 3.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Coffee Center</td>
+                    <td>03/02/2025</td>
+                    <td>96.06€</td>
+                    <td>9.61€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>105.67€</td>
+                    <td><a href="Facturas/Coffee Center 3.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Optimus</td>
+                    <td>03/02/2025</td>
+                    <td>19.63€</td>
+                    <td>4.12€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>23.75€</td>
+                    <td><a href="Facturas/Optimus 3.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Comercial Alcusa</td>
+                    <td>03/02/2025</td>
+                    <td>?</td>
+                    <td>?</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>?</td>
+                    <td><a href="Facturas/Comercial Alcusa 3.2 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">04/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>04/02/2025</td>
+                    <td>39.16€</td>
+                    <td>1.57€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>40.73€</td>
+                    <td><a href="Facturas/Pimpamfruit 4.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>04/02/2025</td>
+                    <td>16.35€</td>
+                    <td>1.64€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>17.99€</td>
+                    <td><a href="Facturas/Pimpamfruit 4.2 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">05/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Marisc</td>
+                    <td>05/02/2025</td>
+                    <td>21.00€</td>
+                    <td>2.10€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>23.10€</td>
+                    <td><a href="Facturas/Marisc Romeu 5.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">06/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Balagué</td>
+                    <td>06/02/2025</td>
+                    <td>58.48€</td>
+                    <td>12.28€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>70.76€</td>
+                    <td><a href="Facturas/Balagué 6.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Maheso</td>
+                    <td>06/02/2025</td>
+                    <td>130.53€</td>
+                    <td>11.27€</td>
+                    <td>-17.84€</td>
+                    <td></td>
+                    <td>123.96€</td>
+                    <td><a href="Facturas/Maheso 6.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Frigorificos Lluis</td>
+                    <td>06/02/2025</td>
+                    <td>240.93€</td>
+                    <td>24.09€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>265.02€</td>
+                    <td><a href="Facturas/Frigorificos Lluis 6.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Comercial Alcusa</td>
+                    <td>06/02/2025</td>
+                    <td>?</td>
+                    <td>?</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>?</td>
+                    <td><a href="Facturas/Comercial Alcusa 6.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>06/02/2025</td>
+                    <td>32.96€</td>
+                    <td>1.32€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>34.28€</td>
+                    <td><a href="Facturas/Pimpamfruit 6.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>06/02/2025</td>
+                    <td>0.90€</td>
+                    <td>0.09€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>0.99€</td>
+                    <td><a href="Facturas/Pimpamfruit 6.2 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">07/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Bonpreu</td>
+                    <td>07/02/2025</td>
+                    <td>52.60€</td>
+                    <td>5.58€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>58.18€</td>
+                    <td><a href="Facturas/Bonpreu 7.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Abella Congelats</td>
+                    <td>07/02/2025</td>
+                    <td>98.42€</td>
+                    <td>6.74€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>105.16€</td>
+                    <td><a href="Facturas/Abella Congelats 7.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
                 </tr>
             </tbody>
         </table>
