--- a/index.html
+++ b/index.html
@@ -917,6 +917,17 @@
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
+                    <td>Agora</td>
+                    <td>06/02/2025</td>
+                    <td>918.93€</td>
+                    <td>84.14€</td>
+                    <td>-453.40€</td>
+                    <td>2.48€ <br>2.86€ <br>3.82€</td>
+                    <td>558.83€</td>
+                    <td><a href="Facturas/Agora 6.2 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
                     <td colspan="9">07/02/2025</td>
                 </tr>
                 <tr>
@@ -939,6 +950,20 @@
                     <td></td>
                     <td>105.16€</td>
                     <td><a href="Facturas/Abella Congelats 7.2.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">08/02/2025</td>
+                </tr>
+                <tr>
+                    <td>Marisc Romeu</td>
+                    <td>08/02/2025</td>
+                    <td>35.00€</td>
+                    <td>3.50€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>38.50€</td>
+                    <td><a href="Facturas/Marisc 8.2.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
             </tbody>
